--- a/Styles.css
+++ b/Styles.css
@@ -9,7 +9,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-image: url("https://user-images.githubusercontent.com/67405069/86321192-7d864a80-bc06-11ea-9f99-56401aa46540.jpg");
+    background-color: #CAF0F8;
     font-family: 'Ubuntu', sans-serif;
     border-style: solid;
     border-width: 4px;
