--- a/Styles.css
+++ b/Styles.css
@@ -3,21 +3,24 @@
     padding: 0px;
     box-sizing: 0px;
 }
-
+.body{
+    width: 100%;
+    height: 100vh;
+    background-image: url("https://user-images.githubusercontent.com/67405069/86557633-c13dc480-bf24-11ea-9d22-14a65261880f.jpg");
+    background-size: cover;
+}
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: #CAF0F8;
     font-family: 'Ubuntu', sans-serif;
     border-style: solid;
-    border-width: 4px;
+    border-width: 0px;
+    border-color: #03045E;
 }
 
 .logo{
-    border-width: 10px;
-    border-color: white;
     color: #03045E;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -48,19 +51,6 @@ nav{
 .burger{
     display: none;
     cursor: pointer;
-}
-.column_one {
-    border-style: solid;
-    border-width: 5px;
-    float: left;
-    width: 45%;
-    height: 300px;
-}
-.column_two {
-    border-style: solid;
-    border-width: 1px;
-    float: right;
-    width: 45%;
 }
 .row:after {
     content: "";
