--- a/Styles.css
+++ b/Styles.css
@@ -42,6 +42,18 @@ nav{
     list-style: none;
     border: 10px white;
 }
+.hover::after{
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #03045E;
+    transition: linear .3s;
+}
+.hover:hover::after{
+    width: 100%;
+    transition: linear .3s;
+}
 .burger div{
     width: 25px;
     height: 3px;
