--- a/Styles.css
+++ b/Styles.css
@@ -3,6 +3,12 @@
     padding: 0px;
     box-sizing: 0px;
 }
+.noselect {
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+    user-select: none;
+}
 .body{
     width: 100%;
     height: 100vh;
